--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,4 +33,4 @@ jobs:
       run: mvn test jacoco:report
     
     - name: Coveralls
-      run: mvn -B --file pom.xml coveralls:report --define repoToken=${{ secrets.COVERALLS_REPO_TOKEN }}
+      run: mvn -B --file pom.xml coveralls:report --define repoToken=AhDgnA022xtHwKBFfRMbUPqke3COQrJgl
