--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,10 +27,18 @@ jobs:
         cache: 'maven'
       
     - name: Build with Maven
-      run: mvn -B install --file pom.xml
+      run: mvn -B clean package --file pom.xml
         
     - name: Jacoco
       run: mvn test jacoco:report
     
-    - name: Coveralls
-      run: mvn -B --file pom.xml coveralls:report --define repoToken=AhDgnA022xtHwKBFfRMbUPqke3COQrJgl
+    - name: Coveralls Coverage Report Setup
+      run: sed -i.bak 's/yourcoverallsprojectrepositorytoken/${{ secrets.COVERALLS_REPO_TOKEN }}/g' pom.xml
+    
+    - name: Coveralls Coverage Report Submission
+      run: mvn coveralls:report
+    
+    - name: Cleanup Repository Token
+      if: ${{ always() }}
+      run: if [ -f "pom.xml.bak" ]; then mv pom.xml.bak pom.xml; fi
+      
