--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,5 +33,5 @@ jobs:
       run: mvn test jacoco:report
     
     - name: 🚀 Coveralls Coverage Report Submission
-      run: mvn coveralls:report --define repoToken=${{ secrets.GITHUB_TOKEN }}
+      run: mvn coveralls:report --define repoToken=${{ secrets.COVERALLS_REPO_TOKEN }}
       
